--- a/README.Rmd
+++ b/README.Rmd
@@ -126,7 +126,8 @@ txdb <- paste0(
 
 #### H. vulgare cv. Golden Promise annotations
 ```{r annotations}
-annotations <- txdb %>% get_txdb_annotation()
+annotations <- txdb %>%
+  get_txdb_annotation()
 ```
 
 
@@ -183,8 +184,7 @@ my_promoters <- promoter_sizes %>%
 
 # PLOT
 ```{r eval=FALSE}
-promoter_sizes %>%
-  plot_promoter_maps(annotations)
+promoter_sizes %>% plot_promoter_maps(annotations)
 ```
 
 ```{r include=FALSE}
