--- a/README.Rmd
+++ b/README.Rmd
@@ -184,7 +184,8 @@ my_promoters <- promoter_sizes %>%
 
 # PLOT
 ```{r eval=FALSE}
-promoter_sizes %>% plot_promoter_maps(annotations)
+promoter_sizes %>%
+  plot_promoter_maps(annotations)
 ```
 
 ```{r include=FALSE}
@@ -206,7 +207,8 @@ promoter_sizes %>%
 
 # EXPORT SEQUENCES
 ```{r}
-my_promoters %>% write_fasta("data/promoters_Min-Yao.fasta")
+my_promoters %>%
+  write_fasta("data/promoters_Min-Yao.fasta")
 ```
 
 
