--- a/README.Rmd
+++ b/README.Rmd
@@ -87,16 +87,16 @@ gff_folder <- paste0(
   "./genome_barley_GP/" # user defined path
 )
 
-fasta_list <- (function(
-    .chr_list = c(
-      "chr1H", "chr2H", "chr3H", "chr4H", "chr5H", "chr6H", "chr7H", "chrUn"
-    ),
-    .folder   = "./genome_barley_GP/" # user defined path
-) {
-  .folder %>% 
-    paste0(paste0("Hordeum_vulgare.refseq[", .chr_list, "].fasta")) %>% 
-    magrittr::set_names(.chr_list)
-})()
+fasta_list <- c(
+  "chr1H" = "./genome_barley_GP/Hordeum_vulgare.refseq[chr1H].fasta",
+  "chr2H" = "./genome_barley_GP/Hordeum_vulgare.refseq[chr2H].fasta", 
+  "chr3H" = "./genome_barley_GP/Hordeum_vulgare.refseq[chr3H].fasta",
+  "chr4H" = "./genome_barley_GP/Hordeum_vulgare.refseq[chr4H].fasta", 
+  "chr5H" = "./genome_barley_GP/Hordeum_vulgare.refseq[chr5H].fasta",
+  "chr6H" = "./genome_barley_GP/Hordeum_vulgare.refseq[chr6H].fasta", 
+  "chr7H" = "./genome_barley_GP/Hordeum_vulgare.refseq[chr7H].fasta",
+  "chrUn" = "./genome_barley_GP/Hordeum_vulgare.refseq[chrUn].fasta"
+)
 ```
 
 ```{r include = FALSE}
@@ -189,10 +189,6 @@ promoter_sizes <- annotations %>%
   get_promoter_distances() %>%
   # Trim found upstream distances and define promoter lengths
   set_promoter_sizes(.min_size = 100, .max_size = 2000)
-
-# Get promoter sequences
-my_promoters <- promoter_sizes %>% 
-  get_promoter_sequences(.txdb = txdb, .FASTA_list = fasta_list)
 ```
 
 # PLOT
@@ -220,7 +216,9 @@ promoter_sizes %>%
 
 # EXPORT SEQUENCES
 ```{r eval=FALSE}
-my_promoters %>%
+
+promoter_sizes %>% 
+  get_promoter_sequences(.txdb = txdb, .FASTA_list = fasta_list) %>%
   write_fasta("data/promoters_Min-Yao.fasta")
 ```
 
